source3/smbd/oplock.c
@@ -142,6 +142,9 @@ static void downgrade_file_oplock(files_struct *fsp)
 	sconn->oplocks.level_II_open++;
 	fsp->sent_oplock_break = NO_BREAK_SENT;
 
+	flush_write_cache(fsp, SAMBA_OPLOCK_RELEASE_FLUSH);
+	delete_write_cache(fsp);
+
 	TALLOC_FREE(fsp->oplock_timeout);
 }
 
